--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,8 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
+@import './header';
+@import './hero';
+@import './about';
+@import './footer';
 @import './example';
